# ziraffe

./: Cargo.toml
.github/workflows/: zireffe-ci.yml
compiler/: Cargo.toml
compiler/src/: compiler.rs  error.rs  instruction.rs  lib.rs  symbol_table.rs
compiler/tests/: test_compiler.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs  zwrap.lalrpop
parser/tests/: test_grammar.rs
src/: main.rs
