[package]
name = "ziraffe"
version = "0.1.0"
authors = ["HyeockJinKim <kherootz@gmail.com>"]
edition = "2018"
repository = "https://github.com/HyeockJinKim/zoker"
license = "MIT"

[workspace]
members = [".", "parser"]

[dependencies]
ziraffe-compiler = {path = "compiler", version = "0.1.0"}
ziraffe-parser = {path = "parser", version = "0.1.0"}

[[bin]]
name = "ziraffe"
path = "src/main.rs"